[employee][Jessie Ray] feature: add jpa and h2 configure

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testCompile "org.mockito:mockito-core:3.4.0"
+    implementation  'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
+    runtime 'com.h2database:h2: 1.4.200'
 }
 
 
