--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,11 @@
+spring:
+  datasource:
+    url: jdbc:h2:file:./h2/testdb
+    driverClassName: org.h2.Driver
+  h2:
+    console:
+      path: /h2-console
+      enabled: true
 
+server:
+  port: 8081
