--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,13 @@ jacocoTestReport {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.3.1.RELEASE'
+    runtime group: 'com.h2database', name: 'h2', version: '1.4.200'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testCompile "org.mockito:mockito-core:3.4.0"
-    implementation  'org.springframework.boot:spring-boot-starter-data-jpa:2.3.1.RELEASE'
-    runtime 'com.h2database:h2: 1.4.200'
+
 }
 
 
