--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ jacocoTestReport {
 
 
 dependencies {
+    compile group: 'org.flywaydb', name: 'flyway-core', version: '6.5.3'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.3.1.RELEASE'
     runtime group: 'com.h2database', name: 'h2', version: '1.4.200'
