--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'jacoco'
 }
 repositories {
+    mavenLocal()
     maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
 }
 
@@ -19,6 +20,7 @@ jacocoTestReport {
 
 
 dependencies {
+    compile 'com.alibaba:fastjson:1.2.5'
     compile group: 'org.flywaydb', name: 'flyway-core', version: '6.5.3'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.3.1.RELEASE'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.3.1.RELEASE'
